; ModuleID = '/home/carl/AnghaBench/linux/kernel/irq/extr_irqdomain.c_irq_domain_get_irq_data.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/irq/extr_irqdomain.c_irq_domain_get_irq_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { %struct.irq_domain* }
%struct.irq_domain = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.irq_data* @irq_domain_get_irq_data(%struct.irq_domain* %0, i32 %1) #0 {
  %3 = alloca %struct.irq_domain*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.irq_data*, align 8
  store %struct.irq_domain* %0, %struct.irq_domain** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call %struct.irq_data* @irq_get_irq_data(i32 %6)
  store %struct.irq_data* %7, %struct.irq_data** %5, align 8
  %8 = load %struct.irq_data*, %struct.irq_data** %5, align 8
  %9 = icmp ne %struct.irq_data* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.irq_data*, %struct.irq_data** %5, align 8
  %12 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %11, i32 0, i32 0
  %13 = load %struct.irq_domain*, %struct.irq_domain** %12, align 8
  %14 = load %struct.irq_domain*, %struct.irq_domain** %3, align 8
  %15 = icmp eq %struct.irq_domain* %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %10
  %17 = load %struct.irq_data*, %struct.irq_data** %5, align 8
  br label %19

18:                                               ; preds = %10, %2
  br label %19

19:                                               ; preds = %18, %16
  %20 = phi %struct.irq_data* [ %17, %16 ], [ null, %18 ]
  ret %struct.irq_data* %20
}

declare dso_local %struct.irq_data* @irq_get_irq_data(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
